improved logs and comments
